# deeds-libtorch

./: .gitignore  CMakeLists.txt  README.md  op.cpp  py_cpp.py  pyproject.toml
deeds_libtorch/: applyBCV.py  apply_bcv.py  datacostD.py  datacost_d.py  file_io.py  imageIOgzType.py  mind_ssc.py  nifti_tensor.py  prims_mst.py  sr_test_interp3d.py  sr_transformations.py  test_interp3d.py  test_transformations.py  transformations.py
lib/: README.md
src/: MINDSSCbox.h  QRsolve.h  affineLTS1.h  applyBCV.cpp  applyBCVfloat.cpp  dataCostD.h  deedsBCV0.cpp  diceMulti.cpp  imageIOgzType.h  linearBCV.cpp  parseArguments.h  primsMST.h  regularisation.h  sr_applyBCV.cpp  transformations.h
src-python/: applyBCV.py
tests/: __init__.py  test_applyBCV.py  test_apply_bcv.py  test_datacostD.py  test_datacost_d.py  test_deedsConvex.py  test_deeds_libtorch.py  test_file_io.py  test_imageIOgzType.py  test_mind_ssc.py  test_prims_mst.py  test_transformations.py
tests/test_data/: .gitignore
tests/test_data/case_2/: gen_data.py
tests/test_data/case_3/: .gitignore
tests/test_data/case_3/linear_bcv_output/: linear_bcv_affine_matrix.txt
tests/test_data/case_4/: .gitignore  README.md
tests/test_data/case_4/linear_bcv_output/: linear_bcv_affine_matrix.txt
tests/test_data/case_5/: .gitignore
tests/test_data/case_5/linear_bcv_output/: linear_bcv_affine_matrix.txt
